src/coreclr/tests/src/Loader/classloader/generics/Instantiation/Negative/abstract07.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
    <CLRTestKind>BuildAndRun</CLRTestKind>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="abstract07.il" />
  </ItemGroup>
</Project>
